# algorithms

./: .gitignore  CMakeLists.txt  Lab4.doc  SIAOD_sem2.sln  SIAOD_sem2.vcxproj  SIAOD_sem2.vcxproj.filters  main.cpp  main_lib.h
finding alghs/: bin_find.cpp  finding_alghs.h
other alghs/: fill_array_decrements.cpp  fill_array_increment.cpp  fill_array_randoms.cpp  get_array_run_series.cpp  get_int_array_sum.cpp  other_algs.h  print_array.cpp
sorts/: bubble_sort.cpp  digital_sort.cpp  heap_sort.cpp  insert_sort.cpp  merge_series_sort.cpp  merge_sort.cpp  quick_sort.cpp  select_sort.cpp  shaker_sort.cpp  shell_sort.cpp  sorts.h
structures/: List.cpp  List.h  Stack.cpp  Stack.h
